# mailo

./: .gitignore  Cargo.toml  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.js
src/: app.d.ts  app.html  app.pcss  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  database.rs  imap.rs  main.rs  settings.rs
src-tauri/src/app/: accounts.rs  events.rs  imap_thread.rs  mod.rs  state.rs
src-tauri/src/database/: account.rs  email.rs  mod.rs
src-tauri/src/imap/: mod.rs
src-tauri/src/ipc/commands/: account.rs  email.rs  event.rs  imap.rs  mod.rs  settings.rs
src-tauri/src/ipc/events/: mod.rs
src/components/: AccountViewer.svelte  AddAccountDialog.svelte  EditAccountDialog.svelte  EmailPreview.svelte  InView.svelte  MailAccountForm.svelte  MinimalThemeSwitcher.svelte  RootLayout.svelte  SettingsAccountViewer.svelte  SettingsLayout.svelte  SideNavButton.svelte  ThemeSwitcher.svelte  schema.ts
src/lib/: utils.ts
src/lib/components/: EmailPreview.svelte
src/lib/custom/components/: AddAccountDialog.svelte  EditAccountDialog.svelte  EmailPreview.svelte  MailAccountForm.svelte  SideNavButton.svelte  schema.ts
src/lib/store/: accounts.ts  emails.ts  events.ts  index.ts  settings.ts  utils.ts
src/lib/stores/: accounts.ts  email.ts  emails.ts  search.ts  settings.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  _customLayout.svelte  old+layout.svelte
src/routes/mail/: +layout.server.ts  +layout.svelte  MailAccountForm.svelte
src/routes/settings/: +layout.svelte  +page.svelte
(+6 files in other folders)
