[package]
name = "mailo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.9.7", features = ["runtime-tokio"], default-features = false }
async-native-tls = { version = "0.5.0", features = ["tokio", "runtime-tokio"], default-features = false }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
